<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comceleluengo.fb.appinp.ConfirmarDatos"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirmar"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_display_1_material" />


    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="30dp"
        android:text="@string/nombre" />
    <TextView
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:layout_marginTop="30dp"
        android:text="@string/fecha" />

    <TextView
        android:id="@+id/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fecha"
        android:layout_marginTop="30dp"
        android:text="@string/telefono"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/telefono"
        android:layout_marginTop="30dp"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="30dp"
        android:text="@string/descripcion"/>

    <Button
        android:layout_width="@dimen/alto_picker"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp"
        android:background="@color/colorAccent"
        android:textSize="@dimen/abc_text_size_large_material" />

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:layout_alignTop="@+id/nombre"
        android:layout_marginLeft="@dimen/margen_contenido"
        android:layout_toRightOf="@+id/nombre" />

    <TextView
        android:id="@+id/textFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:layout_alignTop="@id/fecha"
        android:layout_marginLeft="@dimen/margen_contenido"
        android:layout_toRightOf="@+id/fecha" />

    <TextView
        android:id="@+id/textTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:layout_alignTop="@+id/telefono"
        android:layout_marginLeft="@dimen/margen_contenido"
        android:layout_toRightOf="@+id/telefono" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:layout_alignTop="@+id/email"
        android:layout_marginLeft="@dimen/margen_contenido"
        android:layout_toRightOf="@+id/email" />

    <TextView
        android:id="@+id/textDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:layout_alignTop="@+id/descripcion"
        android:layout_marginLeft="@dimen/margen_contenido"
        android:layout_toRightOf="@+id/descripcion" />

</RelativeLayout>
