<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="comceleluengo.fb.appinp.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/inputs_margenes"
        android:layout_marginRight="@dimen/inputs_margenes"
        android:id="@+id/inpNombre"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/inputs_margenes"
        android:layout_marginRight="@dimen/inputs_margenes"
        android:layout_below="@+id/botCancelar"
        android:id="@+id/inpTelefono">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/inputs_margenes"
        android:layout_marginRight="@dimen/inputs_margenes"
        android:id="@+id/inpEmail"
        android:layout_below="@id/inpTelefono"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/inputs_margenes"
        android:layout_marginRight="@dimen/inputs_margenes"
        android:id="@+id/inpDesc"
        android:layout_below="@id/inpEmail"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:id="@+id/botSiguiente"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="@dimen/ancho_tvFecha"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvFecha"
        android:layout_below="@id/inpNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margen_contenido"
        android:background="@color/colorAccent"
        android:gravity="center"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@id/tvFecha"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"/>

    <Button
        android:layout_width="@dimen/botones"
        android:layout_height="@dimen/inputs_margenes"
        android:text="@string/botcancel"
        android:id="@+id/botCancelar"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/datePicker"
        android:layout_marginLeft="@dimen/margen_cancelar" />
    <Button
        android:layout_width="@dimen/botones"
        android:layout_height="@dimen/inputs_margenes"
        android:text="@string/botok"
        android:id="@+id/botOk"
        android:layout_below="@id/datePicker"
        android:layout_toRightOf="@id/botCancelar"
        android:background="@color/colorAccent" />

</RelativeLayout>








